loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:30: error: not found: value c
c = getGroundColor()
^Poucet1:36: error: not found: value c
}while(c != orange ) 
       ^Poucet1:36: error: not found: value orange
}while(c != orange ) 
            ^