loopdowhile.Poucet1.scala.code
var step = 0;
for (stepper <- 1 to 5){
  forward()
  if(isOverBaggle()){
    step =step + 1
  } 
}

while  (!exitReached()){
  if (step < 3){
    right()
    step = 0
    for (stepper <- 1 to 5){
      forward()
      if(isOverBaggle()){
        step =step + 1
      } 
    }
  }else {
    left()
    step = 0
    for (stepper <- 1 to 5){
      forward()
      if(isOverBaggle()){
        step =step + 1
      } 
    }
  }
}
c = getGroundColor()
do{
  left()
  forward()
  right()
  forward()
}while(c != orange )